[package]
name = "ad-trait-fuzzer"
version = "0.1.0"
edition = "2021"

[lib]
name = "fuzz_core"
path = "src/lib.rs"

[dependencies]
# Replace these with the actual versions you use
ad_trait = "0.1.6" 
tch = "0.22.0" # PyTorch bindings
serde = { version = "1.0", features = ["derive"] } # NEW
serde_json = "1.0" # NEW
rand = "0.8"
arbitrary = { version = "1.3", features = ["derive"] }

[dev-dependencies]
libfuzzer-sys = "0.4"

# Add the fuzz targets section
[fuzz]
targets = [
    "fuzz_target_1",
]
