[package]
name = "fuzz_targets"
version = "0.0.1"
publish = false
edition = "2021"

[dependencies]
ad-trait-fuzzer = { path = ".." } 
tch = "0.22.0"

libfuzzer-sys = "0.4"
ad_trait = "0.1.6"
arbitrary = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "fuzz_target_1" 
path = "fuzz_target_1.rs" 
